# stackspot-python-stack

./: .gitignore  README.md  stack.yaml  todo.txt  todo_regex.txt
.github/workflows/: publish.yaml
cli-add-command-plugin/: plugin.yaml
cli-add-command-plugin/docs/: about.md  implementation.md  usage.md  use-case-cli.md  use-case.md
cli-add-command-plugin/snippets/: commandgroup
cli-plugin/: plugin.yaml
cli-plugin/docs/: about.md  implementation.md  usage.md  use-case.md
cli-plugin/snippets/: clickdependency  entrypoints  poetryscripts
docs/: about.md  use-case-api.md  use-case-cli.md  use-case.md
docs/pt-br/: about.md
endpoint-create/: plugin.yaml
endpoint-create/scripts/: extract_data_from_inputs.py
endpoint-create/snippets/: serverless
endpoint-create/templates/: file.yml
lambda-api/: plugin.yaml
lambda-api-plugin/: plugin.yaml
lambda-api-plugin/docs/: about.md  usage.md
lambda-api-plugin/snippets/: autopep8  fastapi  flake8  mangum
lambda-api-plugin/templates/: .gitignore  local.py  package.json  serverless.yaml
lambda-api/docs/: about.md  implementation.md  usage.md  use-case.md
lambda-api/scripts/: mv_file.py  rm_folders.py
lambda-endpoint-create-multiples-plugin/: plugin.yaml
lambda-endpoint-create-plugin/: plugin.yaml
python-app-template/: template.yaml
python-app-template/templates/src/: pyproject.toml  setup.py
python-app-template/templates/src/tests/: test_{{project_name_sanitized}}.py
python-app-template/templates/src/{{project_name_sanitized}}/: __init__.py
stackfiles/: create_api.yaml  create_cli.yaml
(+65 files in other folders)
