[tool.poetry]
name = "{{project_name_sanitized}}"
version = "{{project_version}}"
description = "{{inputs.project_description}}"
authors = ["{{inputs.author_name}} <{{inputs.author_email}}>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
